--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <button id="generateRoutine" class="generate-btn">
           <i class="fa-solid fa-wand-magic-sparkles"></i> Generate Routine
         </button>
+        <button id="clearAllBtn" class="clear-btn">
+          <i class="fa-solid fa-trash"></i> Clear All
+        </button>
       </div>
 
       <!------- Chat Area ------->
